--- a/1/src/index.css
+++ b/1/src/index.css
@@ -1,8 +1,24 @@
 body {
-  background-color: #222222;
-  color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  text-align: center;
+  background-color: #222222;
+  color: #ffffff;
+  min-height: 95vh;
+  font-size: 32px;
+}
+button {
+  border: none;
+  cursor: pointer;
+  background-color: #111111;
+  color: #ffffff;
+  margin-top: 24px;
+  padding: 20px 34px;
+  border-radius: 20px;
+  font-size: 18px;
+  opacity: 0.9;
+}
+::-webkit-scrollbar {
+  display: none;
 }
